--- a/Views/Admin/RequestPayment.cshtml
+++ b/Views/Admin/RequestPayment.cshtml
@@ -93,6 +93,7 @@
                             <thead>
                                 <tr>
                                     <th>SNo</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POADate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PONumber)</th>
@@ -111,36 +112,46 @@
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                    <tr>
-                                        <td></td>
-                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
-                                        <td>
-                                            @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
-                                        </td>
-                                        <td>
-                                            @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download" })
-                                        </td>
-                                        @if (!string.IsNullOrEmpty(item.PIUpload))
+                                <tr>
+                                    <td></td>
+                                    <td>
+                                        @if (item.POADate == "01/01/1900")
                                         {
-                                            <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank">@item.VendorId</a></td>
+
                                         }
                                         else
                                         {
-                                            <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                            @Html.DisplayFor(modelItem => item.POADate)
                                         }
-                                        <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Price)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Margin)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                                        <td>
-                                            @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
-                                                new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
-                                        </td>
-                                    </tr>
+                                    </td>
+                                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                    <td><a href='~/Content/upload/poupload/@item.POFile' target="_blank">@item.PONumber</a></td>
+                                    <td>
+                                        @Html.EncodedActionLink(item.POId, "PODetails", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Details", @target = "_blank" })
+                                    </td>
+                                    <td>
+                                        @Html.EncodedActionLink(item.VPONumber, "DownloadPO", "Admin", new { id = item.VPONumber }, new { @class = "", title = "Download" })
+                                    </td>
+                                    @if (!string.IsNullOrEmpty(item.PIUpload))
+                                    {
+                                        <td><a href='~/Content/upload/popayment/@item.PIUpload' target="_blank">@item.VendorId</a></td>
+                                    }
+                                    else
+                                    {
+                                        <td>@Html.DisplayFor(modelItem => item.VendorId)</td>
+                                    }
+                                    <td>@Html.DisplayFor(modelItem => item.VendorPrice)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Margin)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.LMRemarks)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                    <td>
+                                        @Html.EncodedActionLink("<i class='fa fa-money'></i>", "PORequestPayment", "Admin",
+                                            new { id = item.VPONumber }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Payment" })
+                                    </td>
+                                </tr>
                                 }
                             </tbody>
                         </table>
