--- a/Views/Admin/RequestedInvoice.cshtml
+++ b/Views/Admin/RequestedInvoice.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Vendor_Indusuno.Extensions
 @model Vendor_Indusuno.ViewModels.RequestInvoiceViewModel
 @{
-    ViewBag.Title = "Request Invoice";
+    ViewBag.Title = "Requested Invoice";
     TempData["Stocks"] = "active";
-    TempData["RequestInvoice"] = "active";
+    TempData["RequestedInvoice"] = "active";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
@@ -82,13 +82,12 @@
                             <thead>
                                 <tr>
                                     <th>SNo</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().OrderDate)</th>
+                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().RInvoiceNo)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().CustomerName)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().PONumber)</th>
                                     <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().POId)</th>
-                                    <th>Vendor Invoices</th>
-                                    <th>@Html.DisplayNameFor(model => model.PurchaseOrdersModelList.FirstOrDefault().Status)</th>
                                     <th>Invoice</th>
+                                    <th>Download</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -96,17 +95,23 @@
                                 {
                                     <tr>
                                         <td></td>
-                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.RInvoiceNo)</td>
                                         <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
                                         <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
                                         <td>
-                                            @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Details", @target = "_blank" })
+                                            @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Edit", @target = "_blank" })
                                         </td>
-                                        <td>@Html.EncodedActionLink(item.VendorInvoice, "MaterialReceiveHistory", "Admin", new { id = item.POId }, new { @class = "", title = "History", @target = "_blank" })</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                        @if (!string.IsNullOrEmpty(item.InvUpload))
+                                        {
+                                            <td><a href='~/Content/upload/poreqinvoice/@item.InvUpload' target="_blank">Download</a></td>
+                                        }
+                                        else
+                                        {
+                                            <td></td>
+                                        }
                                         <td>
-                                            @Html.EncodedActionLink("Request", "PORequestInvoice", "Admin",
-                                                new { id = item.POId }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Request" })
+                                            @Html.EncodedActionLink("Upload", "PORequestInvoiceUpload", "Admin",
+                                                new { id = item.RInvoiceNo }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Upload" })
                                         </td>
                                     </tr>
                                 }
