--- a/Views/Admin/RequestInvoice.cshtml
+++ b/Views/Admin/RequestInvoice.cshtml
@@ -94,21 +94,24 @@
                             <tbody>
                                 @foreach (var item in Model.PurchaseOrdersModelList)
                                 {
-                                    <tr>
-                                        <td></td>
-                                        <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
-                                        <td>
-                                            @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Details", @target = "_blank" })
-                                        </td>
-                                        <td>@Html.EncodedActionLink(item.VendorInvoice, "MaterialReceiveHistory", "Admin", new { id = item.POId }, new { @class = "", title = "History", @target = "_blank" })</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                                        <td>
-                                            @Html.EncodedActionLink("Request", "PORequestInvoice", "Admin",
-                                                new { id = item.POId }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Request" })
-                                        </td>
-                                    </tr>
+                                    if (item.Status != "Success")
+                                    {
+                                        <tr>
+                                            <td></td>
+                                            <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                            <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                            <td>
+                                                @Html.EncodedActionLink(item.POId, "PODetailsWithPOId", "Admin", new { id = item.POId }, new { @class = "", title = "Details", @target = "_blank" })
+                                            </td>
+                                            <td>@Html.EncodedActionLink(item.VendorInvoice, "MaterialReceiveHistory", "Admin", new { id = item.POId }, new { @class = "", title = "History", @target = "_blank" })</td>
+                                            <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                                            <td>
+                                                @Html.EncodedActionLink("Request", "PORequestInvoice", "Admin",
+                                                    new { id = item.POId }, new { @class = "btn btn-edt bg-aqua btn-sm", @target = "_blank", title = "Request" })
+                                            </td>
+                                        </tr>
+                                    }
                                 }
                             </tbody>
                         </table>
